--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
         padding: inherit;
         color: white;
     }
+
     </style>
     <title>Jonas</title>
 </head>
 <body>
     <h1 align='middle'>Jonas HT</h1>
     <hr>
-    <img src="img/python.png" alt="python" width='100' align='left'>
-    <img src="img/html.png" alt="html" width='100'>
-    <img src="img/css.png" alt="css" width='100'>
+    <img  src="img/pessoa.png" alt="pessoa" width="150" align='left'>
+    
+    <img src="img/python.png" alt="python" width='100' align='right'>
+    <img src="img/css.png" alt="css" width='100' align='right'>
+    <img src="img/html.png" alt="html" width='100' align='right'>
+    <img src="img/javascript.png " alt="javascript" width="93" align='right'>
 </body>
 </html>
