--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style type="text/css">
     body{
         font-family: Arial, Helvetica, sans-serif;
+        background-color: rgba(128, 128, 128, 0.212);
     }
 
     h1{
@@ -20,7 +21,7 @@
 <body>
     <h1 align='middle'>Jonas HT</h1>
     <hr>
-    <img  src="img/pessoa.png" alt="pessoa" width="150" align='left'>
+    <img  src="img/pessoa.png" alt="pessoa" width="200" align='left'>
     
     <img src="img/python.png" alt="python" width='100' align='right'>
     <img src="img/css.png" alt="css" width='100' align='right'>
