--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
       <div class="afotoDePerfil">
             <img src="img/pessoa.png" alt="" width="250" align="middle">
-            <a href="https://www.github.com/jonasht" target="_blank"><img src="img/github.png" alt="" width="50" align="left"></a>
-            <a href="https://www.linkedin.com/in/jonasht/" target="_blank"><img src="img/linkedIn.png" alt="" width="45" align="right"></a>
+            
+            <a href="https://www.github.com/jonasht" target="_blank" title="GitHub"><img src="img/github.png" alt="" width="50" align="left"></a>
+            <a href="https://www.linkedin.com/in/jonasht/" target="_blank" title="LinkedIn"><img src="img/linkedIn.png" alt="" width="45" align="right"></a>
       </div>
 
       <div class="a3_1">        
