--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
       <div class="afotoDePerfil">
-            <img src="img/pessoa.png" alt="" width="250" align="middle">
+            <img id='fotoPerfil' src="img/pessoa.png" alt="" width="250" align="middle">
             
             <a href="https://www.github.com/jonasht" target="_blank" title="GitHub"><img src="img/github.png" alt="" width="50" align="left"></a>
             <a href="https://www.linkedin.com/in/jonasht/" target="_blank" title="LinkedIn"><img src="img/linkedIn.png" alt="" width="45" align="right"></a>
@@ -41,8 +41,18 @@
     </div>
     <div class="col4">
       <div class="a4" >
-        <b>Celular:</b> 19 981631466 <br>
-        <b>Email:</b> jhenriquet@outlook.com.br
+       <p>
+          <img src="img/cellphone.png" alt="cellphone" width="25">
+          <b>Celular:</b> 19 981631466 
+          <img src="img/whatsappPhone.png" alt="whatsappPhone" width="25">
+          <br>
+        </p> 
+          
+          <p>
+          <img src="img/email2.png" alt="email" width="25" align='left'>
+
+          <b>Email:</b> jhenriquet@outlook.com.br
+        </p>
       </div>
       <div class="a5"></div>
       <div class="a6"></div>
