--- a/indexteste2.html
+++ b/indexteste2.html
@@ -17,7 +17,7 @@
       programador, desenvolvedor
     </div>
     <div class="col2">
-
+s
 
       <div class="afotoDePerfil">
             <img id='fotoPerfil' src="img/eu.jpg" alt="" width="150">
@@ -41,8 +41,9 @@
       </div>
       
     </div>
+    
     <div class="col4">
-      <div class="a4" >
+      <div class="contato" >
        <p>
           <img src="img/cellphone.png" alt="cellphone" width="25">
           <b>Celular:</b> 19 981631466 
