--- a/teste4.html
+++ b/teste4.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>jonas ht</title>
     <link rel="stylesheet" href="style4.css">
 </head>
 <body>
 
     <div class="cima">
-        <h1>Jonas HT</h1>
+        <h2>Jonas HT</h2>
     </div>
     <div class="titulo">
-        <h2>desenvolvedor</h2>
+        <h3> Desenvolvedor Fullstack Jr || Python || SQL || HTML || CSS || JavaScript || Java </h3>
     </div>
-    
-    <div class="divfoto" align="center">
-        <img src="./img/eu.jpg" alt="", width="200">
-        <div class="divfotoicon">
-            <a href="https://www.github.com/jonasht" target="_blank" title="GitHub"><img src="img/github.png" alt="" width="50" align="right"></a>
-            <a href="https://www.linkedin.com/in/jonasht/" target="_blank" title="LinkedIn"><img src="img/linkedIn.png" alt="" width="45" align="left"></a>
+    <div class="left">
+        <div class="divfoto" align="center">
+            <img src="./img/eu.jpg" alt="", width="200">
+            <div class="divfotoicon">
+                <a href="https://www.github.com/jonasht" target="_blank" title="GitHub"><img src="img/github.png" alt="" width="50" align="right"></a>
+                <a href="https://www.linkedin.com/in/jonasht/" target="_blank" title="LinkedIn"><img src="img/linkedIn.png" alt="" width="45" align="left"></a>
+            </div>
         </div>
-    </div>
-
+   </div>
     <div class="pt1">
         <img src="./img/python.png" alt="" width="100">
         <img src="./img/c.png" alt="" width="100">
