--- a/teste/teste.html
+++ b/teste/teste.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        * {
+        body {
+            background-color: aliceblue;
             margin: 0;
             padding: 0;
-            border: 0;
-          
-
+            font-family: 'Poppins', sans-serif;
         }
         .cima {
             width: 100%;
