add website pronto

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 
 </head>
 <body>
-  <!-- <div class="header">
-    <b>Jonas HT</b> (site em Dev)
-  </div> -->
+
   <header>
-    <b>Jonas HT</b> (site em Dev)    
+    <b>Jonas HT</b>   
   </header>
 
   <div class="container">
@@ -25,7 +23,7 @@
       <p>programador, desenvolvedor</p>
 
         <div class="perfil">
-          <img id='fotoPerfil' src="img/perfil.png" alt="" width="200">
+          <img id='fotoPerfil' src="./img/perfil2.png" alt="">
         </div>
           <div class="links">
             <a href="https://www.github.com/jonasht" target="_blank" title="GitHub"><img src="img/github.png" alt="" width="50" ></a>
@@ -122,6 +120,13 @@ html,  body {
     display: flex;
     justify-content: center;
     /* border: 3 solid darkcyan; */
+    /* overflow: hidden; */
+
+
+  }
+  #fotoPerfil {
+    width: 250px;
+    border-radius: 50%;
   }
   .right {
     /* border: 3px solid green; */
