--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="left">
 
 
-      <p>desenvolvedor fullstack</p>
+      <p class="titulo">Desenvolvedor Fullstack</p>
 
         <div class="perfil">
           <img id='fotoPerfil' src="./img/perfil2.png" alt="">
@@ -33,7 +33,7 @@
               <p>
                 <img src="img/cellphone.png" alt="cellphone" width="25">
                 <b>Celular:</b> 19 981631466 
-                <img src="img/whatsappPhone.png" alt="whatsappPhone" width="25">
+                <img src="img/whatsappPhone.png" alt="whatsapp" width="25">
                 <br>
               </p> 
               
@@ -117,6 +117,10 @@ html,  body {
     /* overflow: hidden; */
 
 
+  }
+  .titulo {
+    display: flex;
+    justify-content: center;
   }
   #fotoPerfil {
     width: 250px;
