--- a/teste/index.html
+++ b/teste/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="estatico">Eu Sou</div>
+        <div class="estatico">></div>
         <ul class="dinamico">
             <li><span>desenvolvedor fulltack</span></li>
             <li><span>desenvolvedor Python</span></li>
