--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
         </div>
           <div class="links">
             <a href="https://www.github.com/jonasht" target="_blank" title="GitHub"><img src="img/github.png" alt="" width="50" ></a>
+            <!-- <a href="/" target="_blank" title="Discord"><img src="./img/discord.png" alt="" width="30" ></a> -->
             <a href="https://www.linkedin.com/in/jonasht/" target="_blank" title="LinkedIn"><img src="img/linkedIn.png" alt="" width="45" ></a>
           </div>
             <div class="contact">
               <p>
-                <img src="img/cellphone.png" alt="cellphone" width="25">
+                <img src="./img/mobile-phone.png" alt="cellphone" width="25">
                 <b>Celular:</b> 19 981631466 
                 <img src="img/whatsappPhone.png" alt="whatsapp" width="25">
                 <br>
               </p> 
               
               <p>
-               <img src="img/email2.png" alt="email" width="25" align='left'>
+               <img src="./img/email_green.png" alt="email" width="25" align='left'>
                 <b>Email:</b> jhenriquet@outlook.com.br
               </p>
           </div>
@@ -46,15 +47,23 @@
 
       <div class="right">
         <div class="d1">
-        <img src="img/sql.png" alt="sql" width="93" align='right'>   
-        <img src="img/java.png" alt="java" width="93" align='right'>
-        <img src="img/c.png" alt="linguagem c" width="93" align='right'>
-        <a href="https://www.github.com/jonasht/python"><img src="img/python.png" alt="python" width='100' align='right'></a>
+        <img src="img/sql.png" alt="sql" width="93" >   
+        <img src="img/java.png" alt="java" width="93" >
+        <img src="img/c.png" alt="linguagem c" width="93" >
+        <a href="https://www.github.com/jonasht/python"><img src="img/python.png" alt="python" width='100' ></a>
+        <img src="./img/postgresql.png" alt="postgresql">
+
       </div>
       <div class="d2">
-        <img src="img/css.png" alt="css" width='100' align='right'>
-        <img src="img/html.png" alt="html" width='100' align='right'>
-        <img src="img/javascript.png " alt="javascript" width="93" align='right'>
+        <img src="img/css.png" alt="css" width='100' >
+        <img src="img/html.png" alt="html" width='100' >
+        <img src="img/javascript.png " alt="javascript" width="93">
+        <img src="./img/django.png" alt="django">
+        <img src="./img/bootstrap.png" alt="">
+
+      </div>
+      <div class="d3">
+        <img src="./img/git.png" alt="">
       </div>
       </div>
 
@@ -67,6 +76,7 @@
   <footer>2022</footer>
 </body>
 <style>
+
 html,  body {
 
     margin: 0;
@@ -133,17 +143,21 @@ html,  body {
     flex-direction: column;
 
   }
-  /* .d1 .d2 {
-    display: flex;
-    background-color: greenyellow;
-    width: 100%;
-    height: 100%;
-  } */
+  .d1 img, .d2 img, .d3 img {
+    width: 100px;
+
+  }
+
+
+
 
   .links {
     /* border: 3px solid blue; */
     display: flex;
     justify-content: space-around;
+   
+
+
 
 
   }
