--- a/teste/index.html
+++ b/teste/index.html
@@ -12,10 +12,10 @@
     <div class="container">
         <div class="estatico">></div>
         <ul class="dinamico">
-            <li><span>desenvolvedor fulltack</span></li>
-            <li><span>desenvolvedor Python</span></li>
-            <li><span>desenvolvedor Djando</span></li>
-            <li><span>Freelancer</span></li>
+            <li><span>desenvolvedor fulltack .........</span></li>
+            <li><span>desenvolvedor Python ........</span></li>
+            <li><span>desenvolvedor Djando .......</span></li>
+            <li><span>Freelancer ....</span></li>
 
         </ul>
     </div>
