making sth mods imgs

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <img id='fotoPerfil' src="./img/perfil2.png" alt="">
         </div>
           <div class="links">
-            <a href="https://www.github.com/jonasht" target="_blank" title="GitHub"><img src="img/github.png" alt="" width="50" ></a>
+            <a href="https://www.github.com/jonasht" target="_blank" title="GitHub"><img class="imggithub" src="img/github.png" alt="" width="50" ></a>
             <!-- <a href="/" target="_blank" title="Discord"><img src="./img/discord.png" alt="" width="30" ></a> -->
-            <a href="https://www.linkedin.com/in/jonasht/" target="_blank" title="LinkedIn"><img src="img/linkedIn.png" alt="" width="45" ></a>
+            <a href="https://www.linkedin.com/in/jonasht/" target="_blank" title="LinkedIn"><img class="imgLinkedin" src="img/linkedIn.png" alt="" width="45" ></a>
           </div>
             <div class="contact">
               <p>
@@ -47,23 +47,23 @@
 
       <div class="right">
         <div class="d1">
-        <img src="img/sql.png" alt="sql" width="93" >   
-        <img src="img/java.png" alt="java" width="93" >
-        <img src="img/c.png" alt="linguagem c" width="93" >
-        <a href="https://www.github.com/jonasht/python"><img src="img/python.png" alt="python" width='100' ></a>
-        <img src="./img/postgresql.png" alt="postgresql">
+        <img src="img/sql.png" alt="sql" width="93" title="SQL">   
+        <img src="img/java.png" alt="java" width="93" title="java" >
+        <img src="img/c.png" alt="linguagem c" width="93" title="linguagem C">
+        <a href="https://www.github.com/jonasht/python"><img src="img/python.png" alt="python" width='100' title="Python"></a>
+        <img src="./img/postgresql.png" alt="postgresql" title="postgresql">
 
       </div>
       <div class="d2">
-        <img src="img/css.png" alt="css" width='100' >
-        <img src="img/html.png" alt="html" width='100' >
-        <img src="img/javascript.png " alt="javascript" width="93">
-        <img src="./img/django.png" alt="django">
-        <img src="./img/bootstrap.png" alt="">
+        <img title="CSS" src="img/css.png" alt="css"  >
+        <img title="HTML" src="img/html.png" alt="html"  >
+        <img title="javascript" src="img/javascript.png" alt="javascript">
+        <img title="Django" src="./img/django.png" alt="django">
+        <img title="Bootstrap" src="./img/bootstrap.png" alt="bootstrap">
 
       </div>
       <div class="d3">
-        <img src="./img/git.png" alt="">
+        <img src="./img/git.png" alt="" title="Git">
       </div>
       </div>
 
@@ -155,12 +155,25 @@ html,  body {
     /* border: 3px solid blue; */
     display: flex;
     justify-content: space-around;
-   
-
-
-
 
   }
+.imgLinkedin{
+  /* border: 1px solid blue; */
+  padding-top: 5px;
+}
+
+.imgLinkedin:hover {
+  background-color: rgb(53, 97, 53);
+  border-radius: 100%;
+
+
+}
+.imggithub:hover {
+  background-color: rgb(53, 97, 53);
+  border-radius: 100%;
+
+
+}
   footer {
     width: 100%;
     height: 25px;
@@ -174,7 +187,7 @@ html,  body {
   header, footer {
     color: rgb(117, 152, 117);
     
-    background-color: rgb(1, 48, 48);
+    /* background-color: rgb(1, 48, 48); */
     background-color: rgba(1, 49, 49, 0.379);
 
     
