--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="links">
           <!-- imagem link github do perfil -->
           <a
-            href="https://www.github.com/jonasht"
+            href="https://www.github.com/"
             target="_blank"
             title="GitHub"
           >
@@ -47,7 +47,7 @@
 
           <!-- imagem link linkdin do perfil -->
           <a
-            href="https://www.linkedin.com/in/jonasht/"
+            href="https://www.linkedin.com/in/"
             target="_blank"
             title="LinkedIn"
             >
@@ -65,7 +65,7 @@
         <div class="contact">
           <p>
             <img src="./img/mobile-phone.png" alt="cellphone" width="25" />
-            <b>Celular:</b> 19 981631466
+            <b>Celular:</b> 19 90000-0000
             <img src="img/whatsappPhone.png" alt="whatsapp" width="25" />
             <br />
           </p>
@@ -77,7 +77,7 @@
               width="25"
               align="left"
             />
-            <b>Email:</b> jhenriquet@outlook.com.br
+            <b>Email:</b> jonas@email.com.br
           </p>
         </div>
       </div>
